--- a/byte-buddy-gradle-plugin/pom.xml
+++ b/byte-buddy-gradle-plugin/pom.xml
@@ -149,7 +149,9 @@
                         <configuration>
                             <skip>${gradle.disabled}</skip>
                             <target>
-                                <copy file="${project.basedir}/build/libs/${project.artifactId}-${project.version}.jar" todir="${project.build.directory}" overwrite="true" />
+                                <copy file="${project.basedir}/build/libs/${project.artifactId}-${project.version}.jar"
+                                      todir="${project.build.directory}"
+                                      overwrite="true" />
                             </target>
                         </configuration>
                     </execution>
