Adjust Gradle build to include correct javadoc links.

--- a/byte-buddy-gradle-plugin/common.gradle
+++ b/byte-buddy-gradle-plugin/common.gradle
@@ -69,9 +69,9 @@ if (true || Boolean.getBoolean('net.bytebuddy.misc.extras')) {
     if (Boolean.getBoolean('net.bytebuddy.misc.extras')) {
         javadoc {
             options {
-                links 'https://docs.oracle.com/javase/6/docs/api'
+                links 'https://docs.oracle.com/javase/1.5.0/docs/api'
                 links 'https://docs.gradle.org/7.5/javadoc'
-                links ''
+                linksOffline "https://javadoc.io/doc/net.bytebuddy/byte-buddy/${pom.parent.version.text().toString()}", '../byte-buddy/target/apidocs'
             }
         }
     }
