--- a/byte-buddy-gradle-plugin/common.gradle
+++ b/byte-buddy-gradle-plugin/common.gradle
@@ -53,38 +53,48 @@ if (targetVersion != null) {
 logger.info("Compiling class files from version ${sourceCompatibility} to ${targetCompatibility}.")
 
 // Without the extras property, creating a javadoc artifact is not necessary.
-// TODO: With the release plugin configured, it is no longer possible to disable javadoc creation
-if (true || Boolean.getBoolean('net.bytebuddy.misc.extras')) {
+if (Boolean.getBoolean('net.bytebuddy.misc.extras')) {
     if (gradle.gradleVersion.startsWith("2.")) { // support legacy version
-        task javadocJar(type: Jar, dependsOn: javadoc) {
+        task copyJavadoc(type: Jar, dependsOn: javadoc) {
             classifier = 'javadoc'
             from javadoc.destinationDir
         }
     } else {
-        task javadocJar(type: Jar, dependsOn: javadoc) {
+        task copyJavadoc(type: Jar, dependsOn: javadoc) {
             archiveClassifier.set('javadoc')
             from javadoc.destinationDir
         }
     }
-    if (Boolean.getBoolean('net.bytebuddy.misc.extras')) {
-        javadoc {
-            options {
-                links 'https://docs.oracle.com/javase/1.5.0/docs/api'
-                links 'https://docs.gradle.org/7.5/javadoc'
-                linksOffline "https://javadoc.io/doc/net.bytebuddy/byte-buddy/${pom.parent.version.text().toString()}", '../byte-buddy/target/apidocs'
-            }
+    javadoc {
+        options {
+            links 'https://docs.oracle.com/javase/1.5.0/docs/api'
+            links 'https://docs.gradle.org/7.5/javadoc'
+            linksOffline "https://javadoc.io/doc/net.bytebuddy/byte-buddy/${pom.parent.version.text().toString()}", '../byte-buddy/target/apidocs'
         }
     }
 } else {
-    task javadocJar {
-        logger.info('javadoc is only generated if net.bytebuddy.misc.extras is set to true')
+    javadoc {
         enabled = false
+    }
+    task copyJavadoc {
+        logger.debug('javadoc jar is only generated if net.bytebuddy.misc.extras is set to true')
+    }
+    gradle.taskGraph.whenReady {
+        tasks.javadocJar.enabled = false
+        tasks.sourcesJar.enabled = false
     }
 }
 
 test {
+    enabled = !Boolean.getBoolean('net.bytebuddy.test.disabled')
     systemProperty('net.bytebuddy.test.version', version)
     systemProperty('net.bytebuddy.test.integration', Boolean.getBoolean('net.bytebuddy.test.integration'))
+}
+compileTestJava {
+    enabled = !Boolean.getBoolean('net.bytebuddy.test.disabled')
+}
+processTestResources {
+    enabled = !Boolean.getBoolean('net.bytebuddy.test.disabled')
 }
 
 task copyLicense(type: Copy) {
