--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,11 @@
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>${version.plugin.coveralls}</version>
+                <configuration>
+                    <sourceDirectories>
+                        <sourceDirectory>${project.basedir}/byte-buddy-dep/src/main/java-6</sourceDirectory>
+                    </sourceDirectories>
+                </configuration>
             </plugin>
             <!-- Also allow for manual spotbugs execution. Note that the generated warnings do not always apply for Byte Buddy's use case. -->
             <plugin>
