--- a/byte-buddy-gradle-plugin/common.gradle
+++ b/byte-buddy-gradle-plugin/common.gradle
@@ -80,8 +80,8 @@ if (Boolean.getBoolean('net.bytebuddy.misc.extras')) {
         logger.debug('javadoc jar is only generated if net.bytebuddy.misc.extras is set to true')
     }
     gradle.taskGraph.whenReady {
-        tasks.javadocJar.enabled = false
-        tasks.sourcesJar.enabled = false
+        tasks.getByPath('javadocJar').enabled = false
+        tasks.getByPath('sourcesJar').enabled = false
     }
 }
 
