Fix javadoc plugin for older Java versions.

--- a/byte-buddy-benchmark/pom.xml
+++ b/byte-buddy-benchmark/pom.xml
@@ -156,6 +156,7 @@
                                     <goal>run</goal>
                                 </goals>
                                 <configuration>
+                                    <skip>${javadoc.download.skip}</skip>
                                     <target>
                                         <mkdir dir="${project.basedir}/target/javadoc-lists/jmh-core-${version.jmh}"/>
                                         <get src="https://javadoc.io/doc/org.openjdk.jmh/jmh-core/${version.jmh}/element-list"
