--- a/byte-buddy-android/pom.xml
+++ b/byte-buddy-android/pom.xml
@@ -13,6 +13,9 @@
 
     <properties>
         <version.android.sdk.dx>11.0.0_r3</version.android.sdk.dx>
+        <version.commons-codec>1.15</version.commons-codec>
+        <version.httpcomponents>4.5.13</version.httpcomponents>
+        <version.org-json>20220320</version.org-json>
     </properties>
 
     <name>Byte Buddy for Android</name>
@@ -57,6 +60,26 @@
             </exclusions>
         </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${version.commons-codec}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${version.httpcomponents}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>${version.org-json}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <resources>
