[release] Release new version.

--- a/byte-buddy-dep/pom.xml
+++ b/byte-buddy-dep/pom.xml
@@ -250,7 +250,10 @@
                         <configuration>
                             <excludes>
                                 <exclude>net.bytebuddy.description.type.TypeDescriptionArrayProjectionTest</exclude>
+                                <exclude>net.bytebuddy.description.annotation.AnnotationDescriptionForLoadedAnnotationTest</exclude>
                                 <exclude>net.bytebuddy.description.annotation.AnnotationDescriptionForLoadedAnnotationDifferentClassLoaderTest</exclude>
+                                <exclude>net.bytebuddy.description.annotation.AnnotationDescriptionLatentTest</exclude>
+                                <exclude>net.bytebuddy.pool.TypePoolDefaultAnnotationDescriptionTest</exclude>
                             </excludes>
                         </configuration>
                     </plugin>
