--- a/byte-buddy-benchmark/pom.xml
+++ b/byte-buddy-benchmark/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy-parent</artifactId>
-        <version>1.12.13-SNAPSHOT</version>
+        <version>1.12.13</version>
     </parent>
 
     <artifactId>byte-buddy-benchmark</artifactId>
@@ -146,10 +146,8 @@
                                 <configuration>
                                     <skip>${javadoc.download.skip}</skip>
                                     <target>
-                                        <mkdir dir="${project.basedir}/target/javadoc-lists/jmh-core-${version.jmh}"/>
-                                        <get src="https://javadoc.io/doc/org.openjdk.jmh/jmh-core/${version.jmh}/element-list"
-                                             dest="${project.basedir}/target/javadoc-lists/jmh-core-${version.jmh}/package-list"
-                                             skipexisting="true"/>
+                                        <mkdir dir="${project.basedir}/target/javadoc-lists/jmh-core-${version.jmh}" />
+                                        <get src="https://javadoc.io/doc/org.openjdk.jmh/jmh-core/${version.jmh}/element-list" dest="${project.basedir}/target/javadoc-lists/jmh-core-${version.jmh}/package-list" skipexisting="true" />
                                     </target>
                                 </configuration>
                             </execution>
