--- a/byte-buddy-dep/pom.xml
+++ b/byte-buddy-dep/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy-parent</artifactId>
-        <version>1.12.13-SNAPSHOT</version>
+        <version>1.12.13</version>
     </parent>
 
     <!--
@@ -282,10 +282,8 @@
                                 <configuration>
                                     <skip>${javadoc.download.skip}</skip>
                                     <target>
-                                        <mkdir dir="${project.basedir}/target/javadoc-lists/asm-${version.asm}"/>
-                                        <get src="https://javadoc.io/doc/org.ow2.asm/asm/${version.asm}/element-list"
-                                             dest="${project.basedir}/target/javadoc-lists/asm-${version.asm}/package-list"
-                                             skipexisting="true"/>
+                                        <mkdir dir="${project.basedir}/target/javadoc-lists/asm-${version.asm}" />
+                                        <get src="https://javadoc.io/doc/org.ow2.asm/asm/${version.asm}/element-list" dest="${project.basedir}/target/javadoc-lists/asm-${version.asm}/package-list" skipexisting="true" />
                                     </target>
                                 </configuration>
                             </execution>
@@ -430,7 +428,7 @@
                                 <configuration>
                                     <target>
                                         <copy todir="${project.basedir}/src/test/precompiled-4">
-                                            <fileset dir="${project.build.testOutputDirectory}" includes="net/bytebuddy/test/precompiled/v4/*.class"/>
+                                            <fileset dir="${project.build.testOutputDirectory}" includes="net/bytebuddy/test/precompiled/v4/*.class" />
                                         </copy>
                                     </target>
                                 </configuration>
@@ -525,7 +523,7 @@
                                 <configuration>
                                     <target>
                                         <copy todir="${project.basedir}/src/test/precompiled-4-jsr14">
-                                            <fileset dir="${project.build.testOutputDirectory}" includes="net/bytebuddy/test/precompiled/v4jsr14/*.class"/>
+                                            <fileset dir="${project.build.testOutputDirectory}" includes="net/bytebuddy/test/precompiled/v4jsr14/*.class" />
                                         </copy>
                                     </target>
                                 </configuration>
@@ -611,7 +609,7 @@
                                 <configuration>
                                     <target>
                                         <copy todir="${project.basedir}/src/main/precompiled-6">
-                                            <fileset dir="${project.build.outputDirectory}" includes="net/bytebuddy/build/CachedReturnPlugin$Advice$*.class"/>
+                                            <fileset dir="${project.build.outputDirectory}" includes="net/bytebuddy/build/CachedReturnPlugin$Advice$*.class" />
                                         </copy>
                                     </target>
                                 </configuration>
@@ -625,7 +623,7 @@
                                 <configuration>
                                     <target>
                                         <copy todir="${project.basedir}/src/test/precompiled-6">
-                                            <fileset dir="${project.build.testOutputDirectory}" includes="net/bytebuddy/test/precompiled/v6/*.class"/>
+                                            <fileset dir="${project.build.testOutputDirectory}" includes="net/bytebuddy/test/precompiled/v6/*.class" />
                                         </copy>
                                     </target>
                                 </configuration>
@@ -703,7 +701,7 @@
                                 <configuration>
                                     <target>
                                         <copy todir="${project.basedir}/src/test/precompiled-7">
-                                            <fileset dir="${project.build.testOutputDirectory}" includes="net/bytebuddy/test/precompiled/v7/*.class"/>
+                                            <fileset dir="${project.build.testOutputDirectory}" includes="net/bytebuddy/test/precompiled/v7/*.class" />
                                         </copy>
                                     </target>
                                 </configuration>
@@ -777,7 +775,7 @@
                                 <configuration>
                                     <target>
                                         <copy todir="${project.basedir}/src/test/precompiled-8">
-                                            <fileset dir="${project.build.testOutputDirectory}" includes="net/bytebuddy/test/precompiled/v8/*.class"/>
+                                            <fileset dir="${project.build.testOutputDirectory}" includes="net/bytebuddy/test/precompiled/v8/*.class" />
                                         </copy>
                                     </target>
                                 </configuration>
@@ -871,7 +869,7 @@
                                 <configuration>
                                     <target>
                                         <copy todir="${project.basedir}/src/test/precompiled-8-parameters">
-                                            <fileset dir="${project.build.testOutputDirectory}" includes="net/bytebuddy/test/precompiled/v8parameters/*.class"/>
+                                            <fileset dir="${project.build.testOutputDirectory}" includes="net/bytebuddy/test/precompiled/v8parameters/*.class" />
                                         </copy>
                                     </target>
                                 </configuration>
@@ -945,7 +943,7 @@
                                 <configuration>
                                     <target>
                                         <copy todir="${project.basedir}/src/test/precompiled-11">
-                                            <fileset dir="${project.build.testOutputDirectory}" includes="net/bytebuddy/test/precompiled/v11/*.class"/>
+                                            <fileset dir="${project.build.testOutputDirectory}" includes="net/bytebuddy/test/precompiled/v11/*.class" />
                                         </copy>
                                     </target>
                                 </configuration>
@@ -1019,7 +1017,7 @@
                                 <configuration>
                                     <target>
                                         <copy todir="${project.basedir}/src/test/precompiled-16">
-                                            <fileset dir="${project.build.testOutputDirectory}" includes="net/bytebuddy/test/precompiled/v16/*.class"/>
+                                            <fileset dir="${project.build.testOutputDirectory}" includes="net/bytebuddy/test/precompiled/v16/*.class" />
                                         </copy>
                                     </target>
                                 </configuration>
@@ -1093,7 +1091,7 @@
                                 <configuration>
                                     <target>
                                         <copy todir="${project.basedir}/src/test/precompiled-17">
-                                            <fileset dir="${project.build.testOutputDirectory}" includes="net/bytebuddy/test/precompiled/v17/*.class"/>
+                                            <fileset dir="${project.build.testOutputDirectory}" includes="net/bytebuddy/test/precompiled/v17/*.class" />
                                         </copy>
                                     </target>
                                 </configuration>
