--- a/byte-buddy-gradle-plugin/pom.xml
+++ b/byte-buddy-gradle-plugin/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy-parent</artifactId>
-        <version>1.12.13-SNAPSHOT</version>
+        <version>1.12.13</version>
     </parent>
 
     <artifactId>byte-buddy-gradle-plugin</artifactId>
@@ -151,9 +151,7 @@
                         <configuration>
                             <skip>${gradle.disabled}</skip>
                             <target>
-                                <copy file="${project.basedir}/build/libs/${project.artifactId}-${project.version}.jar"
-                                      todir="${project.build.directory}"
-                                      overwrite="true" />
+                                <copy file="${project.basedir}/build/libs/${project.artifactId}-${project.version}.jar" todir="${project.build.directory}" overwrite="true" />
                             </target>
                         </configuration>
                     </execution>
