--- a/byte-buddy-maven-plugin/pom.xml
+++ b/byte-buddy-maven-plugin/pom.xml
@@ -22,6 +22,7 @@
         <version.maven.test>3.3.0</version.maven.test>
         <version.slf4j>1.7.36</version.slf4j>
         <version.maven.plexus-archiver>3.7.0</version.maven.plexus-archiver>
+        <version.maven.plexus-util>3.4.2</version.maven.plexus-util>
         <version.commons-io>2.11.0</version.commons-io>
         <version.commons-compress>1.21</version.commons-compress>
         <version.guava>31.1-jre</version.guava>
@@ -115,6 +116,11 @@
                 <version>${version.maven.plexus-archiver}</version>
             </dependency>
             <dependency>
+                <groupId>org.codehaus.plexus</groupId>
+                <artifactId>plexus-utils</artifactId>
+                <version>${version.maven.plexus-util}</version>
+            </dependency>
+            <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${version.commons-io}</version>
@@ -182,6 +188,7 @@
             </activation>
             <properties>
                 <version.maven.plexus-archiver>2.1.1</version.maven.plexus-archiver>
+                <version.maven.plexus-util>3.3.1</version.maven.plexus-util>
                 <version.commons-io>2.5</version.commons-io>
                 <version.commons-compress>1.12</version.commons-compress>
                 <version.guava>20.0</version.guava>
@@ -196,6 +203,7 @@
             </activation>
             <properties>
                 <version.maven.plexus-archiver>2.11</version.maven.plexus-archiver>
+                <version.maven.plexus-util>3.3.1</version.maven.plexus-util>
                 <version.commons-io>2.6</version.commons-io>
                 <version.commons-compress>1.20</version.commons-compress>
                 <version.guava>16.0.1</version.guava>
