--- a/byte-buddy-android-test/pom.xml
+++ b/byte-buddy-android-test/pom.xml
@@ -19,6 +19,7 @@
         <android.build.group>com.simpligility.maven.plugins</android.build.group>
         <version.maven.android>4.6.0</version.maven.android>
         <version.android.sdk.platform>4</version.android.sdk.platform>
+        <japicmp.skip>true</japicmp.skip>
     </properties>
 
     <!--
